--- a/package.json
+++ b/package.json
@@ -3,30 +3,35 @@
   "version": "1.0.0",
   "description": "Locatory.com frontend task",
   "dependencies": {
-    "@babel/preset-react": "^7.8.3",
-    "babel-eslint": "^10.0.3",
-    "concurrently": "^5.0.2",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@svgr/cli": "^5.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "concurrently": "^5.0.2",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
