--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Locatory.com frontend task",
   "dependencies": {
+    "autoprefixer": "^9.7.4",
+    "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -18,6 +21,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@svgr/cli": "^5.0.1",
+    "@svgr/webpack": "^5.0.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.0.2",
