FINAL APP FOR REVIEW

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
   ],
   "settings": {
     "import/resolver": {
+      "webpack": {
+        "config": "webpack.config.js"
+      },
       "node": {
         "extensions": [".js", ".jsx"]
       }
